--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   <link rel="stylesheet" type="text/css" href="./profile.css">
-  <script src="./profile.js"></script>
+  <script src="profile.js"></script>
   <title>Ajinkya Kulkarni</title>
 </head>
 <body>
