--- a/index.html
+++ b/index.html
@@ -1,37 +1,43 @@
 <head>
   <link rel="stylesheet" type="text/css" href="./profile.css">
   <script src="profile.js"></script>
+  <link rel="icon" href="./assets//Cinema-Batman-New-icon.png" type="image/icon type">
   <title>Ajinkya Kulkarni</title>
 </head>
+
 <body>
-<div class="whole">
-  <div id="stars"></div>
-  <div id="stars2"></div>
-  <div id="stars3"></div>
-  <div id="title" class="header">
-    <span> AJINKYA KULKARNI </span>
-    <h3>Stars can't shine without darkness</h3>
+  <div class="whole">
+    <div id="stars"></div>
+    <div id="stars2"></div>
+    <div id="stars3"></div>
+    <div id="title" class="header">
+      <span> AJINKYA KULKARNI </span>
+      <h3>Stars can't shine without darkness</h3>
+    </div>
+    <div class="et-hero-tabs-container">
+      <a class="et-hero-tab" href="#tab-about">About</a>
+      <a class="et-hero-tab" href="#tab-project">Projects</a>
+      <a class="et-hero-tab" href="#tab-contact">Contact</a>
+      <span class="et-hero-tab-slider"></span>
+    </div>
   </div>
-  <div class="et-hero-tabs-container">
-    <a class="et-hero-tab" href="#tab-about">About</a>
-    <a class="et-hero-tab" href="#tab-project">Projects</a>
-    <a class="et-hero-tab" href="#tab-contact">Contact</a>
-    <span class="et-hero-tab-slider"></span>
-  </div>
-</div>
-<main class="et-main">
+  <main class="et-main">
     <section class="et-slide" id="tab-about">
       <h1>About</h1>
-      <h3>something about es6</h3>
+      <img src="./assets/1618686150324.jpg">
     </section>
     <section class="et-slide" id="tab-project">
       <h1>Projects</h1>
-      <h3>something about flexbox</h3>
     </section>
     <section class="et-slide" id="tab-contact">
       <h1>Contact</h1>
-      <h3>something about react</h3>
+      <section class="social-buttons">
+        <div class="social-btns">
+
+        </div>
+      </section>
     </section>
   </main>
 </body>
+
 </html>
