New Update of page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <head>
-  <link rel="stylesheet" type="text/css" href="./profile.css">
-  <script src="profile.js"></script>
-  <link rel="icon" href="./assets//Cinema-Batman-New-icon.png" type="image/icon type">
+  <link rel="stylesheet" type="text/css" href="./profile.css" />
+  <script
+    type="text/javascript"
+    src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"
+  ></script>
+  <script type="text/javascript" src="./profile.js"></script>
+  <link
+    rel="icon"
+    href="./assets//Cinema-Batman-New-icon.png"
+    type="image/icon type"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+  />
   <title>Ajinkya Kulkarni</title>
 </head>
 
@@ -10,33 +22,74 @@
     <div id="stars"></div>
     <div id="stars2"></div>
     <div id="stars3"></div>
-    <div id="title" class="header">
-      <span> AJINKYA KULKARNI </span>
-      <h3>Stars can't shine without darkness</h3>
-    </div>
-    <div class="et-hero-tabs-container">
-      <a class="et-hero-tab" href="#tab-about">About</a>
-      <a class="et-hero-tab" href="#tab-project">Projects</a>
-      <a class="et-hero-tab" href="#tab-contact">Contact</a>
-      <span class="et-hero-tab-slider"></span>
-    </div>
+    <section class="et-hero-tabs">
+      <img
+        id="img_prof"
+        src="./assets/1618685713067.jpg"
+      />
+      <h1>AJINKYA KULKARNI</h1>
+      <h3>If you believe you can achieve</h3>
+      <div class="et-hero-tabs-container">
+        <a class="et-hero-tab" href="#tab-about">About</a>
+        <a class="et-hero-tab" href="#tab-skills">Skills</a>
+        <a class="et-hero-tab" href="#tab-contact">Contact</a>
+        <span class="et-hero-tab-slider"></span>
+      </div>
+    </section>
   </div>
+
   <main class="et-main">
     <section class="et-slide" id="tab-about">
       <h1>About</h1>
+      <p>
+        Hello! I am a full stack developer. I like to create beautiful
+        webapps, solve problems and learn something new everyday. I have
+        pursued Bachelor of Engineering from Maharashtra Institute Of
+        Technology, Pune. I always thrieve to myself better everyday.<br />
+        I am also a football fanatic who is always apt to get some action on
+        the field and a great admirer of FC Barcelona.
+      </p>
+      <img
+        id="img_about"
+        src="./assets/1618686150324.jpg"
+      />
     </section>
-    <section class="et-slide" id="tab-project">
-      <h1>Projects</h1>
+    <section class="et-slide" id="tab-skills">
+      <h1>Skills</h1>
+      <article class="skills">
+        <h2>Java</h2>
+        <p>
+          I have a strong command on Java and OOPS concepts. I often go to
+          coding platforms and get my hands dirty with some challenges.
+        </p>
+        <h2>Backend Development</h2>
+        <p>
+          I have hands on experience in building modular and robust apps using
+          Spring/Spring Boot frameworks like Hibernate, JPA, Spring Security,
+          etc.
+        </p>
+        <h2>Frontend Development</h2>
+        <p>
+          I am currently working on Angular 9 to design awesome webapps.
+          Besides I am also learning React and Node.
+        </p>
+        <h2>Python</h2>
+        <p>
+          I don't like doing redundant tasks so I used python to automate
+          things which made work long and tedious.
+        </p>
+      </article>
     </section>
     <section class="et-slide" id="tab-contact">
       <h1>Contact</h1>
-      <section class="social-buttons">
-        <div class="social-btns">
-
-        </div>
-      </section>
+      <ul>
+      <a href="https://www.facebook.com/Ajjinkyak" target="_blank" class="fa fa-facebook"></a>
+      <a href="https://twitter.com/iamajinkya_k" target="_blank" class="fa fa-twitter"></a>
+      <a href="" class="fa fa-google"></a>
+      <a href="https://www.linkedin.com/in/ajinkyakulkarni333/"  target="_blank" class="fa fa-linkedin"></a>
+      <a href="https://www.instagram.com/ajinkyakulkarni007/" target="_blank" class="fa fa-instagram"></a>
+    </ul>
     </section>
   </main>
 </body>
-
 </html>
