--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <head>
-  <link rel="stylesheet" type="text/css" href="./profile.css" />
+  <link rel="stylesheet" type="text/css" href="profile.css" />
   <script
     type="text/javascript"
     src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"
   ></script>
-  <script type="text/javascript" src="./profile.js"></script>
+  <script type="text/javascript" src="profile.js"></script>
   <link
     rel="icon"
     href="./assets//Cinema-Batman-New-icon.png"
