--- a/index.html
+++ b/index.html
@@ -1,19 +1,9 @@
 <head>
   <link rel="stylesheet" type="text/css" href="./profile.css" />
-  <script
-    type="text/javascript"
-    src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"
-  ></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
   <script type="text/javascript" src="./profile.js"></script>
-  <link
-    rel="icon"
-    href="./assets//Cinema-Batman-New-icon.png"
-    type="image/icon type"
-  />
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-  />
+  <link rel="icon" href="./assets//Cinema-Batman-New-icon.png" type="image/icon type" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <title>Ajinkya Kulkarni</title>
 </head>
 
@@ -23,10 +13,7 @@
     <div id="stars2"></div>
     <div id="stars3"></div>
     <section class="et-hero-tabs">
-      <img
-        id="img_prof"
-        src="./assets/1618685713067.jpg"
-      />
+      <img id="img_prof" src="./assets/1618685713067.jpg" />
       <h1>AJINKYA KULKARNI</h1>
       <h3>If you believe you can achieve</h3>
       <div class="et-hero-tabs-container">
@@ -49,10 +36,7 @@
         I am also a football fanatic who is always apt to get some action on
         the field and a great admirer of FC Barcelona.
       </p>
-      <img
-        id="img_about"
-        src="./assets/1618686150324.jpg"
-      />
+      <img id="img_about" src="./assets/1618686150324.jpg" />
     </section>
     <section class="et-slide" id="tab-skills">
       <h1>Skills</h1>
@@ -82,14 +66,17 @@
     </section>
     <section class="et-slide" id="tab-contact">
       <h1>Contact</h1>
+      <h3>Email : ajinkyakulkarni333@gmail.com</h3>
       <ul>
-      <a href="https://www.facebook.com/Ajjinkyak" target="_blank" class="fa fa-facebook"></a>
-      <a href="https://twitter.com/iamajinkya_k" target="_blank" class="fa fa-twitter"></a>
-      <a href="" class="fa fa-google"></a>
-      <a href="https://www.linkedin.com/in/ajinkyakulkarni333/"  target="_blank" class="fa fa-linkedin"></a>
-      <a href="https://www.instagram.com/ajinkyakulkarni007/" target="_blank" class="fa fa-instagram"></a>
-    </ul>
+        <a href="https://www.facebook.com/Ajjinkyak" target="_blank" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/iamajinkya_k" target="_blank" class="fa fa-twitter"></a>
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=ajinkyakulkarni333@email.com" target="_blank" class="fa fa-google"></a>
+        <a href="https://www.linkedin.com/in/ajinkyakulkarni333/" target="_blank" class="fa fa-linkedin"></a>
+        <a href="https://www.instagram.com/ajinkyakulkarni007/" target="_blank" class="fa fa-instagram"></a>
+        <a href="https://github.com/ajinkyakulkarni333/" target="_blank" class="fa fa-github"></a>
+      </ul>
     </section>
   </main>
 </body>
+
 </html>
