--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <ul>
         <a href="https://www.facebook.com/Ajjinkyak" target="_blank" class="fa fa-facebook"></a>
         <a href="https://twitter.com/iamajinkya_k" target="_blank" class="fa fa-twitter"></a>
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=ajinkyakulkarni333@email.com" target="_blank" class="fa fa-google"></a>
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=ajinkyakulkarni333@gmail.com" target="_blank" class="fa fa-google"></a>
         <a href="https://www.linkedin.com/in/ajinkyakulkarni333/" target="_blank" class="fa fa-linkedin"></a>
         <a href="https://www.instagram.com/ajinkyakulkarni007/" target="_blank" class="fa fa-instagram"></a>
         <a href="https://github.com/ajinkyakulkarni333/" target="_blank" class="fa fa-github"></a>
