Grammar and skills update

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
       <h1>About</h1>
       <p>
         Hello! I am a full stack developer. I like to create beautiful
-        webapps, solve problems and learn something new everyday. I have
+        websites, solve problems and learn something new every day. I have
         pursued Bachelor of Engineering from Maharashtra Institute Of
-        Technology, Pune. I always thrieve to myself better everyday.<br />
+        Technology, Pune. I always thrive to get myself, better every day.<br />
         I am also a football fanatic who is always apt to get some action on
-        the field and a great admirer of FC Barcelona.
+        field and a great admirer of FC Barcelona.
       </p>
       <img id="img_about" src="./assets/1618686150324.jpg" />
     </section>
@@ -43,8 +43,7 @@
       <article class="skills">
         <h2>Java</h2>
         <p>
-          I have a strong command on Java and OOPS concepts. I often go to
-          coding platforms and get my hands dirty with some challenges.
+          I have a strong command on Java and OOPS concepts. I often go to coding platforms and get my hands dirty with some challenges.
         </p>
         <h2>Backend Development</h2>
         <p>
@@ -54,8 +53,11 @@
         </p>
         <h2>Frontend Development</h2>
         <p>
-          I am currently working on Angular 9 to design awesome webapps.
-          Besides I am also learning React and Node.
+          I am currently working on Angular to design awesome web apps. I have proficiency in HTML, CSS, Javascript/Typescript.          
+          Besides, I am also learning React and Node.
+        </p>
+        <h2>Databases</h2>
+        <p>I have hands on experience in databases such as SQL, Oracle, MongoDB. I have a proficient understanding of DBMS concepts.
         </p>
         <h2>Python</h2>
         <p>
