--- a/index.html
+++ b/index.html
@@ -48,13 +48,12 @@
         <h2>Backend Development</h2>
         <p>
           I have hands on experience in building modular and robust apps using
-          Spring/Spring Boot frameworks like Hibernate, JPA, Spring Security,
-          etc.
+          Spring/Spring Boot frameworks like Hibernate, JPA, Spring Security, AOP with RESTFul APIs, JSON 
         </p>
         <h2>Frontend Development</h2>
         <p>
-          I am currently working on Angular to design awesome web apps. I have proficiency in HTML, CSS, Javascript/Typescript.          
-          Besides, I am also learning React and Node.
+          I am currently working on Angular to design awesome web apps. I have proficiency in HTML5, CSS3, Javascript/Typescript.           
+          Besides, I am also learning React for UI/UX designs.
         </p>
         <h2>Databases</h2>
         <p>I have hands on experience in databases such as SQL, Oracle, MongoDB. I have a proficient understanding of DBMS concepts.
