--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div class="et-hero-tabs-container">
         <a class="et-hero-tab" href="#tab-about">About</a>
         <a class="et-hero-tab" href="#tab-skills">Skills</a>
+        <a class="et-hero-tab" href="#tab-playlist">Playlist</a>
         <a class="et-hero-tab" href="#tab-contact">Contact</a>
         <span class="et-hero-tab-slider"></span>
       </div>
@@ -64,6 +65,13 @@
           things which made work long and tedious.
         </p>
       </article>
+    </section>
+    <section class="et-slide" id="tab-playlist">
+      <h1>Playlist</h1>
+      <p>
+        <!-- <iframe  src="https://embed.spotify.com/?uri=spotify:user:officialkingsofleon:playlist:0H7WedYbxtkvT7Wq1BBkTE" width="300" height="380"></iframe> -->
+        <iframe class="text-center" src="https://open.spotify.com/embed/playlist/4RJlgEI9LlqAnpfaXGdeIn" width="300" height="380" ></iframe>
+      </p>
     </section>
     <section class="et-slide" id="tab-contact">
       <h1>Contact</h1>
