--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="stars2"></div>
     <div id="stars3"></div>
     <section class="et-hero-tabs">
-      <img id="img_prof" src="./assets/1618685713067.jpg" />
+      <img id="img_prof" src="./assets/IMG_20181227_114843_183_2.jpg" />
       <h1>AJINKYA KULKARNI</h1>
       <h3>If you believe you can achieve</h3>
       <div class="et-hero-tabs-container">
@@ -68,10 +68,10 @@
     </section>
     <section class="et-slide" id="tab-playlist">
       <h1>Playlist</h1>
-      <p>
-        <!-- <iframe  src="https://embed.spotify.com/?uri=spotify:user:officialkingsofleon:playlist:0H7WedYbxtkvT7Wq1BBkTE" width="300" height="380"></iframe> -->
-        <iframe class="text-center" src="https://open.spotify.com/embed/playlist/4RJlgEI9LlqAnpfaXGdeIn" width="300" height="380" ></iframe>
-      </p>
+      <br>
+        <div class="card card-1">
+        <iframe class="text-center" src="https://open.spotify.com/embed/playlist/4RJlgEI9LlqAnpfaXGdeIn" width="350" height="380" ></iframe>
+        </div>
     </section>
     <section class="et-slide" id="tab-contact">
       <h1>Contact</h1>
