--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="stars2"></div>
     <div id="stars3"></div>
     <section class="et-hero-tabs">
-      <img id="img_prof" src="./assets/IMG_20181227_114843_183_2.jpg" />
+      <img id="img_prof" src="./assets/ajinkya.jpg" />
       <h1>AJINKYA KULKARNI</h1>
       <h3>If you believe you can achieve</h3>
       <div class="et-hero-tabs-container">
